--- a/user_data.tmpl
+++ b/user_data.tmpl
@@ -2,6 +2,5 @@
 
 INSTANCE_ID=$(curl -s http://169.254.169.254/latest/meta-data/instance-id)
 AWS_DEFAULT_REGION=$(curl -s http://169.254.169.254/latest/dynamic/instance-identity/document | grep 'region' | tr -d '", ' | awk -F : '{print $2}')
-ALLOCATION_ID=$(aws ec2 describe-addresses --region $AWS_DEFAULT_REGION --filter="Name=tag:Name,Values=${tag_value}" |  grep -m 1 'AllocationId' | tr -d '", ' |  awk -F : '{print $2}')
 
-aws ec2 associate-address --region $AWS_DEFAULT_REGION --instance-id $INSTANCE_ID --allocation-id $ALLOCATION_ID --allow-reassociation
+aws ec2 associate-address --region $AWS_DEFAULT_REGION --instance-id $INSTANCE_ID --allocation-id ${ALLOCATION_ID} --allow-reassociation
